--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
   <div class="container tab-content" id="contact">
     <h2>Contact Us</h2>
     <p>Feel free to get in touch:</p>
-    <form id="contact-form" action="https://formsubmit.co/yotieno2000@gmail.com" method="POST">
+    <form action="https://formsubmit.co/yotieno2000@gmail.com" method="POST">
 
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required>
