--- a/index.html
+++ b/index.html
@@ -219,7 +219,21 @@
   }
     
 </style>
+<script>
+  function showTab(tabId) {
+    // Hide all tab contents
+    var tabContents = document.getElementsByClassName("tab-content");
+    for (var i = 0; i < tabContents.length; i++) {
+      tabContents[i].style.display = "none";
+    }
 
+    // Show the selected tab content
+    var selectedTab = document.getElementById(tabId);
+    if (selectedTab) {
+      selectedTab.style.display = "block";
+    }
+  }
+</script>
 </head>
 <body>
   
