--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <a href="#about" onclick="showTab('about')">About Us</a>
         <a href="#services" onclick="showTab('services')">Services</a>
         <a href="#projects" onclick="showTab('projects')">Projects</a>
-        <a href="#contact" onclick="showTab('contact')">Contact</a>
+        <a href="#contact" onclick="showTab('contact')">Contact Us</a>
       </nav>
     </div>
     <div class="container tab-content active" id="home">
@@ -353,11 +353,6 @@
     
     <div class="container tab-content" id="contact">
       <h2>Contact Us</h2>
-      <p>Feel free to get in touch:</p>
-      <p class="contact-info">Email: ndojuicoltd@gmail.com</p>
-      <p class="contact-info">Phone: +254704236777 +256779693146</p>
-      <p class="contact-info">Address: Kahawa, Garissa Rd, 4th South Avenue Plot 3411</p>
-    
       <h3>Send us a message</h3>
       <form id="contact-form" action="https://formsubmit.co/yotieno2000@gmail.com" method="POST">
         <label for="name">Name:</label>
@@ -372,5 +367,14 @@
         <button type="submit">Submit</button>
      </form>
     </div>
+
+    <footer>
+      <div class="container">
+        <h2>Contact Information</h2>
+        <p class="contact-info">Email: <a href="mailto:ndojuicoltd@gmail.com" style="color: #00b050;">ndojuicoltd@gmail.com</a></p>
+        <p class="contact-info">Phone: +254704236777 +256779693146</p>
+        <p class="contact-info">Address: Kahawa, Garissa Rd, 4th South Avenue Plot 3411</p>
+      </div>
+    </footer>    
 </body>
 </html>
