--- a/index.html
+++ b/index.html
@@ -354,7 +354,11 @@
     <div class="container tab-content" id="contact">
       <h2>Contact Us</h2>
       <h3>Send us a message</h3>
-      <form id="contact-form" action="https://formsubmit.co/yotieno2000@gmail.com" method="POST">
+      <form id="contact-form" action="https://formsubmit.co/1deabefd3c8987e4dadde8578f3ed253" method="POST">
+      <!----Honeypot--> 
+        <input type="text" name="_honey" style="display:none">
+      <!--Disable reCAPTCHA -->
+        <input type="hidden" name="_captcha" value="false">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
   
