--- a/success.html
+++ b/success.html
@@ -3,15 +3,36 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Infrastructural Company</title>
+<title>Infrastructural Company - Contact Success</title>
 <style>
-  /* Your existing styles here */
+
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
+  }
+
+  .container {
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 40px;
+    margin: 40px auto;
+    max-width: 1000px;
+    text-align: center;
+  }
+
+  .container p {
+    line-height: 1.6;
+    font-size: 18px;
+    color: #333;
+  }
 </style>
 </head>
 <body>
-    
-      <h3>Send us a message</h3>
-      <p>Thank you for getting in touch! We appreciate you contacting NDOJU INFRASTRUCTURAL COMPANY. One of our colleagues will get back in touch with you soon! Have a great day!</p>
-    </div>
+  <div class="container">
+    <p>Thank you for getting in touch! We appreciate you contacting NDOJU INFRASTRUCTURAL COMPANY. One of our colleagues will get back in touch with you soon! Have a great day!</p>
+  </div>
 </body>
 </html>
