--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
   footer .contact-info i {
     margin-right: 10px; /* Add some spacing between the icon and text */
   }
+  
 </style>
 <script>
   function showTab(tabId) {
@@ -231,12 +232,28 @@
       selectedTab.style.display = "block";
     }
   }
+  function resetForm() {
+  // Reset the form elements after successful submission
+  var form = document.getElementById("contact-form");
+  form.reset();
+  
+  // Optionally, you can also clear the honeypot field
+  var honeypot = document.querySelector('input[name="_honey"]');
+  honeypot.value = '';
+  
+  // Optionally, you can add additional logic to display a success message
+  alert("Form submitted successfully!");
+  
+  // Prevent the form from actually submitting (since it's an example)
+  return false;
+}
 </script>
+
 </head>
 <body>
     <div class="container">
       <header>
-          <img src="C:\Users\yotie\OneDrive\Pictures\Screenshots\logo.png" alt="Logo">
+          <img src="logo.png" alt="Logo">
           <h4>NDOJU INFRASTRUCTURAL COMPANY LIMITED</h4>
       </header>
       <nav>
@@ -275,17 +292,17 @@
         <h3>Our Leadership Team</h3>
         <div class="row">
           <div class="column">
-            <img src="C:\Users\yotie\OneDrive\Pictures\Screenshots\justinus.png" alt="Justinus" style="width: auto; max-width: 100%;">
+            <img src="justinus.png" alt="Justinus" style="width: auto; max-width: 100%;">
             <h4>Justinus Lando</h4>
             <p>CEO</p>
           </div>
           <div class="column">
-            <img src="C:\Users\yotie\OneDrive\Pictures\Screenshots\David.png" alt="David"style="width: auto; max-width: 100%;">
+            <img src="David.png" alt="David" style="width: auto; max-width: 100%;">
             <h4>David Ndiga</h4>
             <p>Director of Operations</p>
           </div>
           <div class="column">
-            <img src="C:\Users\yotie\OneDrive\Pictures\Screenshots\Joseph.png" alt="Joseph" style="width: auto; max-width: 100%;">
+            <img src="Joseph.png" alt="Joseph" style="width: auto; max-width: 100%;">
             <h4>Joseph Odenyo</h4>
             <p>Technical Director</p>
           </div>
@@ -341,7 +358,7 @@
     <div class="container tab-content" id="contact">
       <h2>Contact Us</h2>
       <h3>Send us a message</h3>
-      <form id="contact-form" action="https://formsubmit.co/1deabefd3c8987e4dadde8578f3ed253" method="POST">
+      <form id="contact-form" action="https://formsubmit.co/1deabefd3c8987e4dadde8578f3ed253" method="POST" onsubmit="resetForm()">
         <!-- Honeypot to prevent spam -->
         <input type="text" name="_honey" style="display:none">
         <!-- Disable reCAPTCHA -->
@@ -361,6 +378,8 @@
         <textarea id="message" name="message" rows="4" required></textarea>
 
         <button type="submit">Submit</button>
+
+</form>
       </form>
     </div>
 
