--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         <!-- Filter Spam -->
         <input type="hidden" name="_blacklist" value="spammy pattern, banned term, phrase">
         <!-- Success redirection -->
-        <input type="hidden" name="_next" value="https://yotieno5.github.io/formsubmitdemo/success.html">
+       <!-- <input type="hidden" name="_next" value="https://yotieno5.github.io/formsubmitdemo/success.html">-->
 
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
