--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     <div class="container tab-content" id="contact">
       <h2>Contact Us</h2>
       <h3>Send us a message</h3>
-      <form id="contact-form" action="https://formsubmit.co/1deabefd3c8987e4dadde8578f3ed253" method="POST" onsubmit="resetForm(event)">
+      <form id="contact-form" action="https://formsubmit.co/1deabefd3c8987e4dadde8578f3ed253" method="POST">
         <!-- Honeypot to prevent spam -->
         <input type="text" name="_honey" style="display:none">
         <!-- Disable reCAPTCHA -->
@@ -369,7 +369,7 @@
         <!-- Filter Spam -->
         <input type="hidden" name="_blacklist" value="spammy pattern, banned term, phrase">
         <!-- Success redirection -->
-       <!-- <input type="hidden" name="_next" value="https://yotieno5.github.io/formsubmitdemo/success.html">-->
+       <input type="hidden" name="_next" value="https://yotieno5.github.io/formsubmitdemo/success.html" onsubmit="resetForm(event)">
 
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
