--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   alert("Form submitted successfully!");
   
   // You can also optionally redirect to a thank you page if needed.
-  // window.location.href = "thank-you.html";
+  window.location.href = "success.html";
 }
 </script>
 
@@ -361,7 +361,7 @@
     <div class="container tab-content" id="contact">
       <h2>Contact Us</h2>
       <h3>Send us a message</h3>
-      <form id="contact-form" action="https://formsubmit.co/1deabefd3c8987e4dadde8578f3ed253" method="POST">
+      <form id="contact-form" action="https://formsubmit.co/1deabefd3c8987e4dadde8578f3ed253" method="POST" onsubmit="resetForm(event)">
         <!-- Honeypot to prevent spam -->
         <input type="text" name="_honey" style="display:none">
         <!-- Disable reCAPTCHA -->
@@ -369,7 +369,7 @@
         <!-- Filter Spam -->
         <input type="hidden" name="_blacklist" value="spammy pattern, banned term, phrase">
         <!-- Success redirection -->
-       <input type="hidden" name="_next" value="https://yotieno5.github.io/formsubmitdemo/success.html" onsubmit="resetForm(event)">
+       <!--input type="hidden" name="_next" value="https://yotieno5.github.io/formsubmitdemo/success.html" onsubmit="resetForm(event)"-->
 
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
