--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
   honeypot.value = '';
   
   // Optionally, you can add additional logic to display a success message
-  alert("Form submitted successfully!");
+ // alert("Form submitted successfully!");
   
   // You can also optionally redirect to a thank you page if needed.
   window.location.href = "success.html";
