--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     <div class="container tab-content" id="contact">
       <h2>Contact Us</h2>
       <h3>Send us a message</h3>
-      <form id="contact-form" action="https://formsubmit.co/1deabefd3c8987e4dadde8578f3ed253" method="POST" onsubmit="resetForm(event)">
+      <form id="contact-form" action="https://formsubmit.co/1deabefd3c8987e4dadde8578f3ed253" method="POST" onsubmit="resetForm()">
         <!-- Honeypot to prevent spam -->
         <input type="text" name="_honey" style="display:none">
         <!-- Disable reCAPTCHA -->
