--- a/index.html
+++ b/index.html
@@ -231,18 +231,16 @@
     if (selectedTab) {
       selectedTab.style.display = "block";
     }
-  }
-  function resetForm(event) {
-  // clear the honeypot field
-  var honeypot = document.querySelector('input[name="_honey"]');
-  honeypot.value = '';
-
-  // Display a success message
-  alert("Form submitted successfully!");
-
-  // redirect to a thank you page.
-  window.location.href = "success.html";
-}
+    }
+    // Function to display a success message
+    function showSuccessMessage() {
+      alert("Form submitted successfully!");
+    }
+      // Function to show a success message and reload the page
+    function showSuccessAndReload() {
+      alert("Form submitted successfully!");
+       location.reload(); // Reload the page
+    }
 </script>
 
 </head>
@@ -354,13 +352,15 @@
     <div class="container tab-content" id="contact">
       <h2>Contact Us</h2>
       <h3>Send us a message</h3>
-      <form id="contact-form" action="https://formsubmit.co/1deabefd3c8987e4dadde8578f3ed253" method="POST" onsubmit="resetForm(event)">
+      <form id="contact-form" action="https://formsubmit.co/1deabefd3c8987e4dadde8578f3ed253" method="POST" onsubmit="showSuccessAndReload()">
         <!-- Honeypot to prevent spam -->
         <input type="text" name="_honey" style="display:none">
         <!-- Disable reCAPTCHA -->
         <input type="hidden" name="_captcha" value="false">
         <!-- Filter Spam -->
         <input type="hidden" name="_blacklist" value="spammy pattern, banned term, phrase">
+        <!-- Success redirection -->
+       <input type="hidden" name="_next" value="https://yotieno5.github.io/formsubmitdemo/success.html">
 
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required>
