--- a/success.html
+++ b/success.html
@@ -1,38 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Infrastructural Company - Contact Success</title>
-<style>
-
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-  }
-
-  .container {
-    background-color: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 40px;
-    margin: 40px auto;
-    max-width: 1000px;
-    text-align: center;
-  }
-
-  .container p {
-    line-height: 1.6;
-    font-size: 18px;
-    color: #333;
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="5;url=index.html"> <!-- Redirect to index.html after 5 seconds -->
+    <title>Success</title>
 </head>
 <body>
-  <div class="container">
-    <p>Thank you for getting in touch! We appreciate you contacting NDOJU INFRASTRUCTURAL COMPANY. One of our colleagues will get back in touch with you soon! Have a great day!</p>
-  </div>
+    <h1>Form submitted successfully!</h1>
+    <p>You will be redirected to the homepage shortly. If not, <a href="index.html">click here</a>.</p>
 </body>
 </html>
