--- a/success.html
+++ b/success.html
@@ -3,10 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="5;url=index.html"> <!-- Redirect to index.html after 5 seconds -->
-    <title>Success</title>
+    <title>Form Submitted Successfully</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+        }
+
+        h1 {
+            color: #00b050;
+            font-size: 36px;
+            margin-top: 100px;
+        }
+
+        p {
+            font-size: 18px;
+            color: #555;
+        }
+
+        a {
+            text-decoration: none;
+            color: #00b050;
+            font-weight: bold;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <h1>Form submitted successfully!</h1>
+    <h1>Form Submitted Successfully!</h1>
     <p>You will be redirected to the homepage shortly. If not, <a href="index.html">click here</a>.</p>
 </body>
 </html>
